# TASK-125

./: metadata.json
repo/desktop/: CMakeLists.txt  Dockerfile  vcpkg.json
repo/desktop/api_tests/: CMakeLists.txt  test_admin_approval_flow.cpp  test_automation_auth_middleware.cpp  test_automation_bootstrap.cpp  test_automation_contracts.cpp  test_command_authorization.cpp  test_command_booking_flow.cpp  test_command_export_throttling.cpp  test_command_http_status_contracts.cpp  test_command_inventory_flow.cpp  test_command_kennel_search.cpp  test_command_report_flow.cpp  test_command_surface_inventory.cpp  test_command_update_import_flow.cpp  test_error_envelope_contract.cpp  test_item_ledger_flow.cpp  test_kennel_board_flow.cpp  test_reports_studio_flow.cpp
repo/desktop/database/: 001_initial_schema.sql  002_facility_and_kennels.sql  003_animals_and_bookings.sql  004_inventory.sql  005_maintenance.sql  006_reports_and_exports.sql  007_admin_policies.sql  008_scheduler_and_jobs.sql  009_update_management.sql  010_auth_lockout.sql  011_audit_immutability.sql  012_session_absolute_expiry.sql
repo/desktop/include/shelterops/: AppConfig.h  Version.h
repo/desktop/include/shelterops/common/: ErrorEnvelope.h  SecretSafeLogger.h  Uuid.h  Validation.h
repo/desktop/include/shelterops/domain/: AlertRules.h  BookingRules.h  BookingSearchFilter.h  BookingStateMachine.h  InventoryRules.h  PriceRuleEngine.h  ReportPipeline.h  ReportStageGraph.h  RetentionPolicy.h  RolePermissions.h  SchedulerGraph.h  Types.h
repo/desktop/include/shelterops/infrastructure/: AtomicFileWriter.h  BarcodeHandler.h  BoundedCache.h  CancellationToken.h  CrashCheckpoint.h  CredentialVault.h  CryptoHelper.h  Database.h  DeviceFingerprint.h  MigrationRunner.h  RateLimiter.h  UpdateManager.h
repo/desktop/include/shelterops/repositories/: AdminRepository.h  AnimalRepository.h  AuditRepository.h  BookingRepository.h  ConfigRepository.h  InventoryRepository.h  KennelRepository.h  MaintenanceRepository.h  ReportRepository.h  SchedulerRepository.h  SessionRepository.h  UserRepository.h
repo/desktop/include/shelterops/services/: AdminService.h  AlertService.h  AuditService.h  AuthService.h  AuthorizationService.h  AutomationAuthMiddleware.h  BookingService.h  CheckpointService.h  CommandDispatcher.h  ConsentService.h  ExportService.h  FieldMasker.h  InventoryService.h  LockoutPolicy.h  MaintenanceService.h  ReportService.h  RetentionService.h  SchedulerService.h  UserContext.h
repo/desktop/include/shelterops/shell/: ClipboardHelper.h  DockspaceShell.h  ErrorDisplay.h  KeyboardShortcutHandler.h  LoginView.h  SessionContext.h  ShellController.h  TrayBadgeState.h  TrayManager.h
repo/desktop/include/shelterops/workers/: JobQueue.h  WorkerRegistry.h
repo/desktop/packaging/: product.wxs  trusted_publishers.json  version.wxi
repo/desktop/resources/: ShelterOpsDesk.exe.manifest
repo/desktop/src/: AppConfig.cpp  main.cpp
repo/desktop/src/common/: ErrorEnvelope.cpp  SecretSafeLogger.cpp  Uuid.cpp  Validation.cpp
repo/desktop/src/domain/: AlertRules.cpp  BookingRules.cpp  BookingSearchFilter.cpp  BookingStateMachine.cpp  InventoryRules.cpp  PriceRuleEngine.cpp  ReportPipeline.cpp  ReportStageGraph.cpp  RetentionPolicy.cpp  RolePermissions.cpp  SchedulerGraph.cpp
repo/desktop/src/infrastructure/: AtomicFileWriter.cpp  BarcodeHandler.cpp  CrashCheckpoint.cpp  CredentialVault.cpp  CryptoHelper.cpp  Database.cpp  DeviceFingerprint.cpp  MigrationRunner.cpp  RateLimiter.cpp  UpdateManager.cpp
repo/desktop/src/repositories/: AdminRepository.cpp  AnimalRepository.cpp  AuditRepository.cpp  BookingRepository.cpp  ConfigRepository.cpp  InventoryRepository.cpp  KennelRepository.cpp  MaintenanceRepository.cpp  ReportRepository.cpp  SchedulerRepository.cpp  SessionRepository.cpp  UserRepository.cpp
repo/desktop/src/services/: AdminService.cpp  AlertService.cpp  AuditService.cpp  AuthService.cpp  AuthorizationService.cpp  AutomationAuthMiddleware.cpp  BookingService.cpp  CheckpointService.cpp  CommandDispatcher.cpp  ConsentService.cpp  ExportService.cpp  FieldMasker.cpp  InventoryService.cpp  LockoutPolicy.cpp  MaintenanceService.cpp  ReportService.cpp  RetentionService.cpp  SchedulerService.cpp
repo/desktop/src/shell/: ClipboardHelper.cpp  DockspaceShell.cpp  ErrorDisplay.cpp  KeyboardShortcutHandler.cpp  SessionContext.cpp  ShellController.cpp  TrayBadgeState.cpp  TrayManager.cpp
repo/desktop/src/ui/controllers/: AdminPanelController.cpp  AlertsPanelController.cpp  AppController.cpp  AuditLogController.cpp  DiagnosticsController.cpp  GlobalSearchController.cpp  ItemLedgerController.cpp  KennelBoardController.cpp  ReportsController.cpp  SchedulerPanelController.cpp
repo/desktop/src/ui/primitives/: TableSortState.cpp  ValidationState.cpp
repo/desktop/src/ui/views/: AdminPanelView.cpp  AlertsPanelView.cpp  AuditLogView.cpp  ItemLedgerView.cpp  KennelBoardView.cpp  (+3 more)
repo/desktop/src/workers/: JobQueue.cpp  WorkerRegistry.cpp
repo/desktop/unit_tests/: CMakeLists.txt  test_admin_panel_controller.cpp  test_admin_repository.cpp  test_admin_service.cpp  test_alert_rules.cpp  test_alert_service.cpp  test_alerts_panel_controller.cpp  test_animal_repository.cpp  test_app_bootstrap.cpp  test_app_config.cpp  test_app_controller.cpp  test_atomic_file_writer.cpp  test_audit_log_controller.cpp  test_audit_repository.cpp  test_audit_service.cpp  test_auth_service.cpp  test_authorization_service.cpp  test_barcode_handler.cpp  test_booking_repository.cpp  test_booking_rules.cpp  test_booking_search_filter.cpp  test_booking_service.cpp  test_booking_state_machine.cpp  test_bounded_cache.cpp  test_cancellation_token.cpp  test_checkpoint_service.cpp  test_clipboard_helper.cpp  test_command_dispatcher.cpp  test_command_dispatcher_surface.cpp  test_consent_service.cpp  test_crash_checkpoint.cpp  test_credential_vault.cpp  test_crypto_helper.cpp  test_database.cpp  test_device_fingerprint.cpp  test_diagnostics_controller.cpp  test_dockspace_shell.cpp  test_error_display.cpp  test_error_envelope.cpp  test_export_service.cpp  (+44 more)
(+33 files in other folders)
